--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "sharp": "^0.34.4",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0",
+    "vite-plugin-image-optimizer": "^2.0.2",
     "web-vitals": "^4.2.4"
   }
 }
