--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node backend/server.js"
   },
   "dependencies": {
+    "axios": "^1.13.4",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "express-async-handler": "^1.2.0",
     "framer-motion": "^11.3.6",
     "lucide-react": "^0.468.0",
+    "mongoose": "^9.1.5",
     "openai": "^6.16.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
